修改了登录设备限制逻辑

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -27,7 +27,7 @@ mybatis:
 # tk.mybatis配置
 mapper:
   mappers:
-    - com.shiro.demo.utils.BaseMapper
+    - com.shiro.utils.BaseMapper
   not-empty: false
   identity: MYSQL
   check-example-entity-class: true
